@startuml
class RenderSystem {
    + RenderSystem(graphicsDevice:GraphicsDevice)
    + <<override>> Initialize(mapperService:IComponentMapperService) : void
    + <<override>> Draw(gameTime:GameTime) : void
}
RenderSystem --> SpriteRenderer
class SpriteRenderer {
    + Sprite : Texture2D <<get>> <<set>>
    + Color : Color <<get>> <<set>>
    + Flip : bool <<get>> <<set>>
    + SpriteRenderer(sprite:Texture2D, color:Color, flip:bool)
}
class TerrainGenerator {
    + tiledMap : TiledMap
    + tiledMapRenderer : TiledMapRenderer
    + TerrainGenerator(graphics:GraphicsDevice, tiledMap:TiledMap)
    + Dispose() : void
    + Draw(gameTime:GameTime) : void
    + Initialize(world:World) : void
    + Update(gameTime:GameTime) : void
}

class MechanoCraft {
    + MechanoCraft()
}
MechanoCraft --> TerrainGenerator
MechanoCraft --> RenderSystem

@enduml
